--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ h2{
 .main_img{
     margin: 30px 300px;
     height: 600px;
-    background-image: url("../1.jpg");
+    background-image: url("../img/1.jpg");
     background-size: contain;
     background-repeat: no-repeat;
 }
