--- a/contacts/css/style.css
+++ b/contacts/css/style.css
@@ -51,10 +51,10 @@ body{
 .navbar>.container-xxl{
     justify-content: space-between;
 }
-/*
+
 .navbar-expand-lg .navbar-collapse{
     justify-content: flex-end;
-}*/
+}
 /*
 .contacts{
     border: 1px solid #A6A297;
