add favicon img+catalog center

--- a/catalog/css/style.css
+++ b/catalog/css/style.css
@@ -60,6 +60,7 @@ h2{
     display: flex;
     justify-content: center;
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 /*
 p{
@@ -67,15 +68,17 @@ p{
     display: flex;
     position: relative;
 }*/
+.catalog_row {
+    text-align: center;
+}
 .catalog_1, .catalog_2, .catalog_3, .catalog_4, .catalog_5 {
     display: inline;
 }
-
-
 .footer {
     font-size: 14px;
     color: rgb(0, 0, 0);
     opacity: 0.7;
     text-align:center;
-    padding-bottom: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
