--- a/contacts/css/style.css
+++ b/contacts/css/style.css
@@ -65,6 +65,7 @@ h2{
     display: flex;
     justify-content: center;
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 p{
     font-size: 16px;
@@ -76,5 +77,6 @@ p{
     color: rgb(0, 0, 0);
     opacity: 0.7;
     text-align:center;
-    padding-bottom: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
