--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,10 @@ h2{
     display: flex;
     justify-content: center;
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 .main_img{
-    margin: 30px 300px;
+    margin: 10px 300px;
     height: 600px;
     background-image: url("../img/1.jpg");
     background-size: contain;
@@ -78,5 +79,6 @@ p{
     color: rgb(0, 0, 0);
     opacity: 0.7;
     text-align:center;
-    padding-bottom: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
