--- a/contacts/css/style.css
+++ b/contacts/css/style.css
@@ -62,15 +62,13 @@ body{
 h2{
     font-size: 20px;
     text-transform: uppercase;
-    display: flex;
-    justify-content: center;
+    text-align: center;
     margin-top: 50px;
     margin-bottom: 50px;
 }
 p{
     font-size: 16px;
-    display: flex;
-    justify-content: center;
+    text-align: center;
 }
 .footer {
     font-size: 14px;
