--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,7 @@ body{
 h2{
     font-size: 20px;
     text-transform: uppercase;
-    display: flex;
-    justify-content: center;
+    text-align: center;
     margin-top: 50px;
     margin-bottom: 50px;
 }
@@ -72,8 +71,7 @@ h2{
 }
 p{
     font-size: 16px;
-    display: flex;
-    justify-content: center;
+    text-align: center;
 }
 .footer {
     font-size: 14px;
