--- a/contacts/css/style.css
+++ b/contacts/css/style.css
@@ -2,6 +2,8 @@ body{
     font-family: Roboto;
     font-style: normal;
     font-weight: 400;
+    width: 100%;
+    max-width: 100%;
 }
 .header_logo{
     height: 40px;
@@ -31,20 +33,10 @@ body{
     padding-left: 30px;
     border-right: 1px solid #494949;
 }
-/*
-.nav-item:last-child{
-    padding-right: 100px;
-    border: none;
-}*/
 .navbar{
     width: 100%;
-    padding-top: 50px;
+    padding-top: 30px;
 }
-/*
-.navbar-light .navbar-toggler{
-    position: absolute;
-    right: 50px;
-}*/
 .navbar>.container, .navbar>.container-fluid,
 .navbar>.container-lg, .navbar>.container-md,
 .navbar>.container-sm, .navbar>.container-xl,
@@ -55,20 +47,17 @@ body{
 .navbar-expand-lg .navbar-collapse{
     justify-content: flex-end;
 }
-/*
-.contacts{
-    border: 1px solid #A6A297;
-}*/
 h2{
     font-size: 20px;
     text-transform: uppercase;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 30px;
     margin-bottom: 50px;
 }
 p{
     font-size: 16px;
     text-align: center;
+    margin: 30px 10px;
 }
 .footer {
     font-size: 14px;
@@ -77,4 +66,20 @@ p{
     text-align:center;
     padding-top: 20px;
     padding-bottom: 20px;
+}
+
+@media (max-width: 769px) {
+    .navbar {
+        padding-top: 20px;
+    }
+    .header_logo {
+        height: 30px;
+        margin-left: 5px;
+    }
+}
+@media (max-width: 426px) {
+    h2{
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
 }
