--- a/catalog/css/style.css
+++ b/catalog/css/style.css
@@ -13,11 +13,6 @@ body{
     width: 100%;
     padding-top: 30px;
 }
-/* кнопка меню зафиксирована, появляется до разрешения 991*/
-.navbar-light .navbar-toggler{
-    position: fixed;
-    right: 10px;
-}
 .navbar-light .navbar-nav .nav-link{
     font-size: 16px;
     line-height: 16px;
@@ -100,11 +95,24 @@ h2{
     }
 }
 /*до 600px menu black*/
-@media (max-width: 600px) {
-    .header{
+@media (max-width: 600px){
+    .header {
         background-color: #2F3132;
         display: flex;
         align-items: center;
+        height: 60px;
+    }
+    /* кнопка меню зафиксирована, появляется до разрешения 991*/
+    .navbar-light .navbar-toggler{
+        position: fixed;
+        right: 10px;
+    }
+    .navbar-nav {
+        position: fixed;
+        text-align: center;
+    }
+    .container-fluid{
+        position: absolute;
     }
     .header_logo_black{
         display: none;
@@ -124,10 +132,11 @@ h2{
     }
     .navbar-light .navbar-nav .nav-link.active,
     .navbar-light .navbar-nav .show>.nav-link {
-        color: #ffffff;
+        color: red;
+        padding-top: 20px;
     }
     .navbar-light .navbar-nav .nav-link {
-        color: #ffffff;
+        color: red;
     }
     .navbar-light .navbar-toggler{
         color: #ffffff;
